Changed the border styling on the navbar a tags to stop distorting the page when hovered over. Achieved by adding a transparent border when not hovered over. This prevented the size of the element to change to compensate for the border on hover.

--- a/The_NoshCo_Css_styling_sheet.css
+++ b/The_NoshCo_Css_styling_sheet.css
@@ -73,12 +73,11 @@ body {
   color: rgb(31, 15, 31);
   text-decoration: none;
   padding: 0 14px;
+  border: 1px solid transparent; /* Add a transparent border */
 }
 
 .navbar a:hover {
-  border-width: 1px;
-  border-style: solid;
-  border-color: black;
+  border-color: black; /* Change border color on hover */
 }
 
 /* -------------------------Product widgets ----------------------*/
